src/test/wacc/invalid/syntaxErr/literals/stringLiteralOnlyAscii.wacc
# Strings must only contain ASCII

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
    string s = "héllo world"
end
